--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
     <title>the depths of my nervous system</title>
     <style>
@@ -22,7 +23,6 @@
             font-weight: lighter;
             font-size: 1.2rem;
             letter-spacing: 2px;
-            cursor: default;
             color: #fff;
             /* Multi-layered shadow for a realistic neon glow */
             text-shadow: 
