--- a/src/404.html
+++ b/src/404.html
@@ -4,78 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
     <title>error: existence not found</title>
-    <style>
-        body {
-            background-color: #050505;
-            color: #d1d1d1;
-            font-family: "Courier New", Courier, monospace;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-            overflow: hidden;
-        }
-
-        .glitch-container {
-            text-align: center;
-        }
-
-        h1 {
-            font-size: 3rem;
-            font-weight: lighter;
-            letter-spacing: 5px;
-            margin-bottom: 0;
-            position: relative;
-            color: #fff;
-            animation: flicker 0.5s infinite alternate;
-        }
-
-        p.philosophy {
-            font-size: 0.9rem;
-            color: #444;
-            margin-top: 20px;
-            letter-spacing: 1px;
-        }
-
-        a {
-            margin-top: 30px;
-            color: #888;
-            text-decoration: none;
-            border: 1px solid #333;
-            padding: 5px 15px;
-            transition: all 0.3s;
-        }
-
-        a:hover {
-            color: #fff;
-            border-color: #fff;
-            background-color: rgba(255, 255, 255, 0.05);
-        }
-
-        @keyframes flicker {
-            0% { opacity: 0.8; text-shadow: 2px 0 0 red, -2px 0 0 blue; }
-            100% { opacity: 1; text-shadow: -2px 0 0 red, 2px 0 0 blue; }
-        }
-
-        /* Subtle scanline effect across the screen */
-        .scanline {
-            width: 100%;
-            height: 100px;
-            z-index: 10;
-            background: linear-gradient(0deg, rgba(0, 0, 0, 0) 0%, rgba(255, 255, 255, 0.161803399) 16.1803399%, rgba(0, 0, 0, 0) 100%);
-            opacity: 0.1;
-            position: absolute;
-            bottom: 100%;
-            animation: scanline 6s linear infinite;
-        }
-
-        @keyframes scanline {
-            0% { bottom: 100%; }
-            100% { bottom: -100%; }
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="scanline"></div>
