Yes i was tired
well well well guess who doesnt know how to read x)

--- a/src/about/index.html
+++ b/src/about/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="scanline"></div>
 
-    <h1>More about him.</h1>
+    <h1>more about him.</h1>
     
     <p>
         an integrated system enthusiast. foreseeing pathways of electrons, predicting light rays, intruding automated systems.
