--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
     <p>
         <a href="https://github.com/LJBoxx" target="_blank">github</a>
         <a href="https://instagram.com/ljbox.exe" target="_blank">insta</a>
-        <a target="_self" href="about" target="_blank">about</a>
+        <a target="_self" href="about">about</a>
         <a href="mailto:contact@ljbox.fr">contact</a>
     </p>
 
