--- a/src/about/dummy/index.html
+++ b/src/about/dummy/index.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
     <title>the depths of my nervous system</title>
-    <link rel="stylesheet" href="../../style.css">
+    <link rel="stylesheet" href="/style.css">
 </head>
 
 
@@ -29,7 +29,7 @@
         </p>
 
         <hr style="border: 0; border-top: 1px solid #222; margin: 20px 0;">
-        <a href="https://root-me.org/ljbox" class="main-link">root-me</a><br>
+        <a href="https://root-me.org/ljbox" class="main-link"target="_blank">root-me</a><br>
         kind of inactive smh...
     </div>
 
