--- a/src/about/dummy/index.html
+++ b/src/about/dummy/index.html
@@ -17,7 +17,7 @@
         <p>
             <span class="label">EVENT: OTERIA CNC</span><br>
             - 1st Ed: Top 18 Quals | Top 12 Final<br>
-            - 2nd Ed: Top 9 Quals | Top [TBD] Final<br>
+            - 2nd Ed: Top 9 Quals | Top 29 Final<br>
             <a href="https://cyber-ninja-ctf.fr" class="sub-link">[ event_link ]</a>
         </p>
         <hr style="border: 0; border-top: 1px solid #222; margin: 20px 0;">
